docker-compose for dev mode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,28 @@
 version: '3'
 services:
   correction:
-    image: 'correction_step:latest'
-    restart: 'always'
+    build:
+      context: .
+      dockerfile: Dockerfile
+    # restart: 'always'
+    volumes:
+      - ".:/app"
+      - "../test_pipeline/test_data/tests/ztf_sample:/app/tests"
+    network_mode: host
     environment:
-      - DB_HOST=
-      - DB_USER=
-      - DB_PASSWORD=
-      - DB_PORT=
-      - DB_NAME=
+      - DB_HOST=localhost
+      - DB_USER=postgres
+      - DB_PASSWORD=docker
+      - DB_PORT=5432
+      - DB_NAME=test
       - CONSUMER_TOPICS=
       - CONSUMER_SERVER=
       - CONSUMER_GROUP_ID=
-      - PRODUCER_TOPIC=
-      - PRODUCER_SERVER=
-      - ES_PREFIX=
-      - ES_NETWORK_HOST=
-      - ES_NETWORK_PORT=
+      - AVRO_PATH=/app/tests
+      - PRODUCER_TOPIC=correction
+      - PRODUCER_SERVER=localhost:9092
+      - ES_PREFIX=ztf_pipeline
+      - ES_NETWORK_HOST=localhost
+      - ES_NETWORK_PORT=9200
+      - LOGGING_DEBUG=True
+      - N_PROCESS=1
