--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas==0.25.3
-boto3==1.10.8
-elasticsearch==7.6.0
-psycopg2==2.8.4
-astropy==4.0
+astropy>=4.0
+elasticsearch>=7.6.0
+pandas>=0.25.3
 -e git+https://git@github.com/alercebroker/APF@develop#egg=APF
+-e git+https://git@github.com/alercebroker/db-plugins#egg=db-plugins
+-e git+ssh://git@github.com/alercebroker/lc_correction#egg=lc_correction
