--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ elasticsearch>=7.6.0
 pandas>=0.25.3
 -e git+https://git@github.com/alercebroker/APF@develop#egg=APF
 -e git+https://git@github.com/alercebroker/db-plugins#egg=db-plugins
--e git+ssh://git@github.com/alercebroker/lc_correction#egg=lc_correction
+-e git+https://git@github.com/alercebroker/lc_correction#egg=lc_correction
