--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -1,10 +1,5 @@
 name: build_image
 on: [push]
-  #workflow_run:
-    #workflows: ["test"]
-    #branches: [new-db]
-    #types: 
-    # - completed
 jobs:
   push_to_registry:
     name: Push Docker image to GitHub Packages
@@ -15,7 +10,7 @@ jobs:
       - name: Prepare
         id: prep
         run: |
-          DOCKER_IMAGE=docker.pkg.github.com/alercebroker/correction_step/correction_step
+          DOCKER_IMAGE=ghcr.io/alercebroker/correction_step
           VERSION=latest
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
@@ -32,8 +27,8 @@ jobs:
       - name: Login to GitHub Packages Docker Registry
         uses: docker/login-action@v1
         with:
-          registry: docker.pkg.github.com
-          username: ${{ github.repository_owner }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
           password: ${{ secrets.PUBLISH_IMAGE_TOKEN }}
       - name: Push to GitHub Packages
         uses: docker/build-push-action@v2
