--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 astropy>=4.0
 pandas>=0.25.3
--e git+https://git@github.com/alercebroker/APF@develop#egg=APF
+-e git+https://git@github.com/alercebroker/APF#egg=APF
 -e git+https://git@github.com/alercebroker/db-plugins#egg=db-plugins
 -e git+https://git@github.com/alercebroker/lc_correction#egg=lc_correction
