--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -26,7 +26,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
-        coverage run --source correction -m pytest -x -s tests/unittest/
+        coverage run --source correction_step -m pytest -x -s tests/unittest/
         coverage xml
     - name: Codecov
       uses: codecov/codecov-action@v1
