--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -23,4 +23,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
-        python -m pytest -x -s tests/unittest/
+        python -m pytest -x -s tests/integration/
