--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,12 @@ authors = ["ALeRCE Broker <alercebroker@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9"
 numpy = "~1.24.2"
 pandas = "~1.5.3"
 fastavro = { version = "~1.4.12", optional = true }
 prometheus-client = { version = "~0.16.0", optional = true }
+confluent-kafka = { version = "~2.0.2", optional = true }
 apf_base = { version = "~2.1.5", optional = true }
 pytest = { version = "^7.2.0", optional = true }
 pytest-cov = { version = "^4.0.0", optional = true }
