--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,18 @@ fastavro = { version = "~1.4.12", optional = true }
 prometheus-client = { version = "~0.16.0", optional = true }
 confluent-kafka = { version = "~2.0.2", optional = true }
 apf_base = { version = "~2.1.5", optional = true }
-pytest = { version = "^7.2.0", optional = true }
-pytest-cov = { version = "^4.0.0", optional = true }
-pytest-docker = { version = "^1.0.1", optional = true }
-black = { version = "^22.12.0", optional = true }
 
 [tool.poetry.extras]
-apf = ["fastavro", "prometheus-client", "apf_base"]
-dev = ["fastavro", "prometheus-client", "apf_base", "pytest", "pytest-cov", "pytest-docker", "black"]
+apf = ["fastavro", "prometheus-client", "confluent-kafka", "apf_base"]
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+pytest-cov = "^4.0.0"
+pytest-docker = "^1.0.1"
+black = "^22.12.0"
+
+[tool.poetry.scripts]
+run-step = "correction._step:run_step"
 
 [tool.black]
 line-length = 120
