--- a/tests/integration/docker-compose.yaml
+++ b/tests/integration/docker-compose.yaml
@@ -1,14 +1,14 @@
 version: "3"
 services:
   zookeeper:
-    image: "bitnami/zookeeper:3.7"
+    image: "bitnami/zookeeper:3.8.1-debian-11-r6"
     ports:
       - "2181:2181"
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
 
   kafka:
-    image: "bitnami/kafka:3.2"
+    image: "bitnami/kafka:3.4.0-debian-11-r3"
     ports:
       - "9092:9092"
     environment:
